php.ini書き換え追加など

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - db
     volumes:
       - magento-sync:/var/www/html:nocopy
+      - "~/.ssh:/home/magento/.ssh"
     depends_on:
       - db
     networks:
