--- a/docker-sync.yml
+++ b/docker-sync.yml
@@ -6,7 +6,7 @@ syncs:
     sync_userid: '1000'
     sync_strategy: 'native_osx'
     host_disk_mount_mode: 'cached'
-    src: './src'
+    src: '/Users/maruyamakai/Develop/momo/momo-ec/magento2'
     # watch_args: '-v'
     sync_excludes: [
     '.idea',
