--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,10 @@ services:
       - db
     networks:
       - magento-network
+    deploy:
+      resources:
+        limits:
+          memory: 1g
 
   db:
     image: mysql:5.7
@@ -25,6 +29,10 @@ services:
       - db-data:/var/lib/mysql
     networks:
       - magento-network
+    deploy:
+      resources:
+        limits:
+          memory: 1g
 
   redis:
     image: redis
@@ -32,6 +40,10 @@ services:
       - 6379
     networks:
       - magento-network
+    deploy:
+      resources:
+        limits:
+          memory: 256m
 
   redis-session:
     image: redis
@@ -39,6 +51,10 @@ services:
       - 6379
     networks:
       - magento-network
+    deploy:
+      resources:
+        limits:
+          memory: 256m
 
   mailhog:
     image: mailhog/mailhog
@@ -47,6 +63,10 @@ services:
       - 8025:8025
     networks:
       - magento-network
+    deploy:
+      resources:
+        limits:
+          memory: 256m
 
 volumes:
   magento-sync:
