--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
     deploy:
       resources:
         limits:
-          memory: 1g
+          cpus: '0.8'
+          memory: 1G
 
   db:
     image: mysql:5.7
@@ -32,7 +33,8 @@ services:
     deploy:
       resources:
         limits:
-          memory: 1g
+          cpus: '0.50'
+          memory: 512M
 
   redis:
     image: redis
@@ -43,7 +45,8 @@ services:
     deploy:
       resources:
         limits:
-          memory: 256m
+          cpus: '0.20'
+          memory: 256M
 
   redis-session:
     image: redis
@@ -54,7 +57,8 @@ services:
     deploy:
       resources:
         limits:
-          memory: 256m
+          cpus: '0.20'
+          memory: 256M
 
   mailhog:
     image: mailhog/mailhog
@@ -66,7 +70,8 @@ services:
     deploy:
       resources:
         limits:
-          memory: 256m
+          cpus: '0.20'
+          memory: 256M
 
 volumes:
   magento-sync:
