--- a/docker-sync.yml
+++ b/docker-sync.yml
@@ -2,11 +2,11 @@ version: "2"
 options:
   verbose: true
 syncs:
-  magento-sync:
-    sync_userid: '1000'
+  sunrock-sync:
+    sync_userid: '501'
     sync_strategy: 'native_osx'
     host_disk_mount_mode: 'cached'
-    src: './src'
+    src: '../magento2'
     # watch_args: '-v'
     sync_excludes: [
     '.idea',
