Add Docker configuration files and update environment variables

--- a/.env.sample
+++ b/.env.sample
@@ -27,3 +27,10 @@ KIBANA_PORT=5601
 
 # Increase or decrease based on the available host memory (in bytes)
 MEM_LIMIT=1073741824
+
+# Set the application's path (absolute or relative)
+APP_PATH=/Users/Masakazu/dev/momonatural/source/momo-ec24/magento2
+
+# Path inside of container where the APP_PATH will be mounted,
+# This var can also be used as workdir value for docker
+DESTINATION_PATH=/var/www/html
