--- a/docker-sync.yml
+++ b/docker-sync.yml
@@ -2,47 +2,47 @@ version: "2"
 options:
   verbose: true
 syncs:
-  magento-sync:
+  ${COMPOSE_PROJECT_NAME}-unison-sync:
     sync_userid: '1000'
     sync_strategy: 'native_osx'
     host_disk_mount_mode: 'cached'
-    src: './src'
+    src: "${APP_PATH}"
     # watch_args: '-v'
     sync_excludes: [
-    '.idea',
-    '.git',
-    '.platform',
-    '.travis',
-    'var/cache',
-    'var/sessions',
-    'var/page_cache',
-    'var/generation',
-    'var/composer_home',
-    'var/view_preprocessed',
-    'var/session',
-    'var/tmp',
-    'node_modules',
-    'generated/*',
-    #'vendor/*',
-    'pub/static/*',
-    'pub/media/*'
+      '.idea',
+      '.git',
+      '.platform',
+      '.travis',
+      'var/cache',
+      'var/sessions',
+      'var/page_cache',
+      'var/generation',
+      'var/composer_home',
+      'var/view_preprocessed',
+      'var/session',
+      'var/tmp',
+      'node_modules',
+      'generated/*',
+      #'vendor/*',
+      'pub/static/*',
+      'pub/media/*'
     ]
     watch_excludes: [
-    '.idea',
-    '.git',
-    '.platform',
-    '.travis',
-    'var/cache',
-    'var/sessions',
-    'var/page_cache',
-    'var/generation',
-    'var/composer_home',
-    'var/view_preprocessed',
-    'var/session',
-    'var/tmp',
-    'node_modules',
-    'generated/*', 
-    #'vendor/*',
-    'pub/static/*',
-    'pub/media/*'
+      '.idea',
+      '.git',
+      '.platform',
+      '.travis',
+      'var/cache',
+      'var/sessions',
+      'var/page_cache',
+      'var/generation',
+      'var/composer_home',
+      'var/view_preprocessed',
+      'var/session',
+      'var/tmp',
+      'node_modules',
+      'generated/*',
+      #'vendor/*',
+      'pub/static/*',
+      'pub/media/*'
     ]
