--- a/.env.sample
+++ b/.env.sample
@@ -29,7 +29,7 @@ KIBANA_PORT=5601
 MEM_LIMIT=1073741824
 
 # Set the application's path (absolute or relative)
-APP_PATH=/Users/Masakazu/dev/momonatural/source/momo-ec24/magento2
+APP_PATH=./src
 
 # Path inside of container where the APP_PATH will be mounted,
 # This var can also be used as workdir value for docker
