--- a/.env.sample
+++ b/.env.sample
@@ -25,6 +25,18 @@ ES_PORT=9200
 KIBANA_PORT=5601
 #KIBANA_PORT=80
 
+# Port to MySQL to the host
+DB_PORT=32769
+#DB_PORT=3306
+
+# Port to Web HTTP to the host
+WEB_PORT=32770
+#WEB_PORT=80
+
+# Port to XDebug to the host
+XDEBUG_PORT=9003
+#XDEBUG_PORT=9003
+
 # Increase or decrease based on the available host memory (in bytes)
 MEM_LIMIT=1073741824
 
