document route path を指定できるようにした. elastic search のエラーを修正した.

--- a/.env.sample
+++ b/.env.sample
@@ -46,3 +46,6 @@ APP_PATH=./src
 # Path inside of container where the APP_PATH will be mounted,
 # This var can also be used as workdir value for docker
 DESTINATION_PATH=/var/www/html
+
+# Set apache document root path
+APACHE_DOCUMENT_ROOT=/var/www/html/magento2/pub
